--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -1,11 +1,48 @@
-search{
-   display: flex;
-   justify-content: end;
-   padding-right: 2%;
-}
-
-.input-btn{
+.contenedor-input-search {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+  }
+  
+  .search-input-button {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    align-items: center; 
+  }
+  
+  .catalogo-input {
+    flex: 2;
+    font-weight: 400;
+    font-family: 'Roboto', sans-serif;
+    padding: 10px;
+    margin-right: 2%;
+    font-size: 0.9rem;
+    margin-top: 10px;
+  }
+  
+  .search-button {
+    border-radius: 0.5rem;
     background-color: var(--naval-blue-color);
     color: white;
-    font-weight: 500;
-}
+    font-weight: 450;
+    font-family: 'Roboto', sans-serif;
+    border-style: none;
+    font-size: 0.9rem;
+    padding: 12px 5px;
+    flex: 1;
+  }
+  
+  .contenedor-table-catalogo {
+    margin: 0 auto;
+    display: flex;
+    padding: 2%;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .contenedor-table-catalogo table {
+    width: 100%;
+  }
+  
