--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -10,7 +10,41 @@
     width: 100%;
     align-items: center; 
   }
+  .search-title{
+    font-size: 1.2rem;
+    font-weight: 600;
+  }
+  .search-select-container {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 3%;
+  }
+  .search-iqms{
+    display: flex;
+    flex:2;
+    flex-direction: row;
+  }
+  .search-select-label {
+    margin-bottom: 2%;
+    font-weight: 600;
+    font-size: 0.9rem;
+  }
   
+  .search-select {
+    padding: 8px;
+  }
+
+  .search-label-input{
+    display: flex;
+    flex: 2;
+    flex-direction: column;
+    margin-right: 2%;
+    margin-bottom: 10px;
+  }
+  .search-label{
+    font-size: 0.8rem;
+    font-weight: 600;
+  }
   .catalogo-input {
     flex: 2;
     font-weight: 400;
@@ -18,7 +52,6 @@
     padding: 10px;
     margin-right: 2%;
     font-size: 0.9rem;
-    margin-top: 10px;
   }
   
   .search-button {
