--- a/src/components/FileUpload.css
+++ b/src/components/FileUpload.css
@@ -15,3 +15,36 @@
   margin-right: 5px;
   min-height: 35px;
 }
+.input-buttons{
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: start;
+  width: 100%;
+}
+
+.container-buttons{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: start;
+  width: 100%;
+  padding-top: 10px;
+}
+
+@media screen and (width >= 780px) {
+  .input-buttons{
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  }
+  .container-buttons{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    padding-top: 10px;
+  }
+  
+}
